Create project structure (src, notebooks, figures)

--- a/bootstrap.ipynb
+++ b/bootstrap.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOD1jJTfGD9WNBYSavPG/pt",
+      "authorship_tag": "ABX9TyMUZ49wBlawNAiluhSSXwJy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "ZJo8yZGlbvjK"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "!mkdir -p notebooks src figures\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!touch src/__init__.py\n",
+        "!touch src/algorithms.py\n",
+        "!touch src/operators.py\n",
+        "!touch src/utils.py\n",
+        "!touch figures/.gitkeep\n"
+      ],
+      "metadata": {
+        "id": "JuTHhZsLccd_"
+      },
+      "execution_count": 2,
+      "outputs": []
     }
   ]
 }
