Add src and figures files (tracked)

--- a/bootstrap.ipynb
+++ b/bootstrap.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMUZ49wBlawNAiluhSSXwJy",
+      "authorship_tag": "ABX9TyP2Ax4iwdvWHz5QDCLJqKvW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,6 +51,164 @@
       },
       "execution_count": 2,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!mkdir -p notebooks src figures\n",
+        "!mv bootstrap.ipynb notebooks/exp1_baseline_sppa_wppa.ipynb\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3VvgO0BHeWYh",
+        "outputId": "d86d222e-4b28-4b68-94a7-eb9acdb6eed4"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "mv: cannot stat 'bootstrap.ipynb': No such file or directory\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pwd\n",
+        "!ls -la\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "daiDQm5rfGaI",
+        "outputId": "3b09ec16-85f6-426f-9413-5eb736aea85c"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/content\n",
+            "total 28\n",
+            "drwxr-xr-x 1 root root 4096 Dec 28 14:51 .\n",
+            "drwxr-xr-x 1 root root 4096 Dec 28 14:48 ..\n",
+            "drwxr-xr-x 4 root root 4096 Dec 11 14:34 .config\n",
+            "drwxr-xr-x 2 root root 4096 Dec 28 14:51 figures\n",
+            "drwxr-xr-x 2 root root 4096 Dec 28 14:51 notebooks\n",
+            "drwxr-xr-x 1 root root 4096 Dec 11 14:34 sample_data\n",
+            "drwxr-xr-x 2 root root 4096 Dec 28 14:51 src\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%writefile src/__init__.py\n",
+        "# package marker\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QBeMRaCMf0Sc",
+        "outputId": "a456a479-cd89-4eeb-9479-d29aee98fbfb"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting src/__init__.py\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%writefile src/algorithms.py\n",
+        "\"\"\"\n",
+        "Algorithms: SPPA, WPPA, (later PPA, EG)\n",
+        "\"\"\"\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tiTE0a4gf5du",
+        "outputId": "3a4f2a93-c071-485d-930e-436297265475"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting src/algorithms.py\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%writefile src/operators.py\n",
+        "\"\"\"\n",
+        "Operators / resolvents / projections\n",
+        "\"\"\"\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7K-GmKL-f9TP",
+        "outputId": "03181a1e-1a45-4549-907b-ef2fdda19a23"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting src/operators.py\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%writefile src/utils.py\n",
+        "\"\"\"\n",
+        "Utilities\n",
+        "\"\"\"\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "V7HYLITTgAl_",
+        "outputId": "75bec4ab-28ad-4c7f-fc72-bef09f6f3e75"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting src/utils.py\n"
+          ]
+        }
+      ]
     }
   ]
 }
