Created the Experiment 1

--- a/notebooks/exp1_baseline_sppa_wppa.ipynb
+++ b/notebooks/exp1_baseline_sppa_wppa.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMs7r8IZEj5xTQsAzajocbD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,84 +27,52 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "ZJo8yZGlbvjK"
       },
       "outputs": [],
       "source": [
-        "!mkdir -p notebooks src figures\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!touch src/__init__.py\n",
-        "!touch src/algorithms.py\n",
-        "!touch src/operators.py\n",
-        "!touch src/utils.py\n",
-        "!touch figures/.gitkeep\n"
-      ],
-      "metadata": {
-        "id": "JuTHhZsLccd_"
-      },
-      "execution_count": 2,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!mkdir -p notebooks src figures\n",
-        "!mv bootstrap.ipynb notebooks/exp1_baseline_sppa_wppa.ipynb\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "3VvgO0BHeWYh",
-        "outputId": "d86d222e-4b28-4b68-94a7-eb9acdb6eed4"
-      },
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "mv: cannot stat 'bootstrap.ipynb': No such file or directory\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!pwd\n",
-        "!ls -la\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "daiDQm5rfGaI",
-        "outputId": "3b09ec16-85f6-426f-9413-5eb736aea85c"
-      },
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "/content\n",
-            "total 28\n",
-            "drwxr-xr-x 1 root root 4096 Dec 28 14:51 .\n",
-            "drwxr-xr-x 1 root root 4096 Dec 28 14:48 ..\n",
-            "drwxr-xr-x 4 root root 4096 Dec 11 14:34 .config\n",
-            "drwxr-xr-x 2 root root 4096 Dec 28 14:51 figures\n",
-            "drwxr-xr-x 2 root root 4096 Dec 28 14:51 notebooks\n",
-            "drwxr-xr-x 1 root root 4096 Dec 11 14:34 sample_data\n",
-            "drwxr-xr-x 2 root root 4096 Dec 28 14:51 src\n"
-          ]
-        }
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "from src.algorithms import SPPA, WPPA\n",
+        "from src.operators import resolvent_linear_identity\n",
+        "from src.utils import norm\n",
+        "\n",
+        "# Problem parameters\n",
+        "n = 100\n",
+        "x_star = np.zeros(n)\n",
+        "x0 = np.ones(n)\n",
+        "u = np.zeros(n)\n",
+        "r = 1.0\n",
+        "\n",
+        "# Halpern / Mann parameters\n",
+        "N = 500\n",
+        "alpha_seq = [1.0 / (k + 2) for k in range(N)]\n",
+        "\n",
+        "# Run algorithms\n",
+        "hist_sppa = SPPA(x0, u, alpha_seq, r, resolvent_linear_identity)\n",
+        "hist_wppa = WPPA(x0, alpha_seq, r, resolvent_linear_identity)\n",
+        "\n",
+        "# Errors\n",
+        "err_sppa = [norm(x - x_star) for x in hist_sppa]\n",
+        "err_wppa = [norm(x - x_star) for x in hist_wppa]\n",
+        "\n",
+        "# Plot\n",
+        "plt.figure(figsize=(7,5))\n",
+        "plt.plot(err_sppa, label=\"SPPA\", linewidth=2)\n",
+        "plt.plot(err_wppa, label=\"WPPA\", linestyle=\"--\", linewidth=2)\n",
+        "plt.yscale(\"log\")\n",
+        "plt.xlabel(\"Iteration\")\n",
+        "plt.ylabel(r\"$\\|x_n - x^\\star\\|$\")\n",
+        "plt.legend()\n",
+        "plt.grid(True)\n",
+        "plt.tight_layout()\n",
+        "plt.show()\n",
+        "\n",
+        "# Optional: save figure\n",
+        "# plt.savefig(\"../figures/exp1_convergence.png\", dpi=300)\n"
       ]
     }
   ]
