--- a/experiments/Example5_4.ipynb
+++ b/experiments/Example5_4.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOKUD+5t5Hn7kc66Zv8hst2",
+      "authorship_tag": "ABX9TyMoQrRnA5CAIMzb9f5szbVh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "t8Cbaq_J1lD4",
-        "outputId": "9a27426a-db20-4baf-ee86-5945bbd214ee"
+        "outputId": "1fd28aad-baf9-4567-ba20-513bc04ab48a"
       },
       "outputs": [
         {
@@ -42,13 +42,13 @@
           "name": "stdout",
           "text": [
             "Cloning into 'sp-pa-gep'...\n",
-            "remote: Enumerating objects: 224, done.\u001b[K\n",
-            "remote: Counting objects: 100% (40/40), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (17/17), done.\u001b[K\n",
-            "remote: Total 224 (delta 29), reused 23 (delta 23), pack-reused 184 (from 1)\u001b[K\n",
-            "Receiving objects: 100% (224/224), 4.16 MiB | 25.35 MiB/s, done.\n",
-            "Resolving deltas: 100% (97/97), done.\n",
-            "/content/sp-pa-gep\n"
+            "remote: Enumerating objects: 253, done.\u001b[K\n",
+            "remote: Counting objects: 100% (69/69), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (46/46), done.\u001b[K\n",
+            "remote: Total 253 (delta 46), reused 23 (delta 23), pack-reused 184 (from 1)\u001b[K\n",
+            "Receiving objects: 100% (253/253), 4.38 MiB | 29.52 MiB/s, done.\n",
+            "Resolving deltas: 100% (114/114), done.\n",
+            "/content/sp-pa-gep/sp-pa-gep\n"
           ]
         }
       ],
@@ -77,7 +77,7 @@
       "metadata": {
         "id": "Y-p9F0331yeM"
       },
-      "execution_count": 2,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -125,6 +125,11 @@
         "\n",
         "def g3_raw(x):\n",
         "    return 2*x[0]**2 + x[1]**2 + x[2]**2 + 2*x[0] - x[1] - x[3] - 5\n",
+        "\n",
+        "def constr_violation(x):\n",
+        "    \"\"\"Max violation of g_i(x) <= 0 constraints (0 means feasible).\"\"\"\n",
+        "    v = max(g1_raw(x), g2_raw(x), g3_raw(x))\n",
+        "    return float(max(0.0, v))\n",
         "\n",
         "# scipy 'ineq' expects c(x) >= 0, so use -g_i(x) >= 0\n",
         "\n",
@@ -189,49 +194,61 @@
         "# =========================\n",
         "# Resolvent for EP: u_n = argmin_{y in C} phi(y) + (1/(2r))||y - x_n||^2\n",
         "# =========================\n",
-        "def resolvent(xn, r=1.0, x_init=None):\n",
+        "def resolvent(xn, r=1.0, x_init=None, ftol=1e-9, maxiter=1000):\n",
+        "    \"\"\"\n",
+        "    Resolvent subproblem:\n",
+        "        u = argmin_{y in C}  phi(y) + (1/(2r))||y - xn||^2\n",
+        "    Solved approximately with SLSQP.\n",
+        "\n",
+        "    Returns:\n",
+        "        u, ok, nit, hit_max, constraint_violation(u)\n",
+        "    \"\"\"\n",
         "    def obj(y):\n",
         "        d = y - xn\n",
-        "        return phi(y) + 0.5/r * np.dot(d, d)\n",
+        "        return phi(y) + 0.5 / r * np.dot(d, d)\n",
         "\n",
         "    # candidate initial points (in order)\n",
         "    inits = []\n",
         "    if x_init is not None:\n",
         "        inits.append(np.array(x_init, dtype=float))\n",
         "    inits.append(np.array(xn, dtype=float))\n",
-        "    inits.append(np.zeros(4, dtype=float))   # usually feasible after projection\n",
-        "    inits.append(x_star.copy())              # known feasible optimum\n",
+        "    inits.append(np.zeros(4, dtype=float))\n",
+        "    inits.append(x_star.copy())\n",
+        "\n",
         "    # also try projection of xn onto C\n",
         "    pxn, ok_pxn = proj_C(xn, x_init=np.zeros(4))\n",
-        "    if ok_pxn:\n",
-        "        inits.append(pxn)\n",
+        "    if ok_pxn and pxn is not None:\n",
+        "        inits.append(np.array(pxn, dtype=float))\n",
         "\n",
         "    best = None\n",
         "    best_val = np.inf\n",
-        "    best_success = False\n",
+        "    best_res = None\n",
         "\n",
         "    for init in inits:\n",
         "        res = minimize(\n",
         "            obj, init, method=\"SLSQP\", constraints=constraints,\n",
-        "            options={\"ftol\": 1e-9, \"maxiter\": 1000}  # relaxed ftol, more iters\n",
+        "            options={\"ftol\": ftol, \"maxiter\": maxiter}\n",
         "        )\n",
         "        y = res.x\n",
         "        val = obj(y)\n",
+        "\n",
         "        if val < best_val:\n",
         "            best_val = val\n",
         "            best = y\n",
-        "            best_success = bool(res.success)\n",
+        "            best_res = res\n",
         "\n",
         "        if res.success:\n",
-        "            return y, True\n",
+        "            nit = int(getattr(res, \"nit\", -1))\n",
+        "            cv = constr_violation(y)\n",
+        "            return y, True, nit, (nit == maxiter), cv\n",
         "\n",
         "    # If all failed, return best found but mark as False\n",
-        "    return best, False\n",
+        "    if best is None:\n",
+        "        best = np.array(xn, dtype=float)\n",
         "\n",
-        "\n",
-        "'''def residual_fn(x):\n",
-        "    val, ok = residual_R(x)\n",
-        "    return float(val)'''\n",
+        "    nit = int(getattr(best_res, \"nit\", -1)) if best_res is not None else -1\n",
+        "    cv = constr_violation(best)\n",
+        "    return best, False, nit, (nit == maxiter), cv\n",
         "# =========================\n",
         "# SPPA / WPPA runners with logging\n",
         "# =========================\n",
@@ -239,12 +256,19 @@
         "    def step_fn(x, k):\n",
         "        alpha = 1.0 / (k + 2.0)\n",
         "\n",
-        "        u, ok = resolvent(x, r=r, x_init=x)   # warm-start with x\n",
+        "        u, ok, nit, hit_max, cv = resolvent(x, r=r, x_init=x)\n",
+        "        residual = float(np.linalg.norm(x - u))  # <-- correct proximal residual\n",
+        "\n",
         "        x_new = alpha * u_anchor + (1.0 - alpha) * u\n",
         "\n",
-        "        # also compute residual using the already-available proj_C (optional but useful)\n",
-        "        # NOTE: residual_R(x_new) would be expensive; instead use residual of x_new only if needed.\n",
-        "        return x_new, {\"u\": u, \"ok_resolvent\": ok}\n",
+        "        return x_new, {\n",
+        "            \"u\": u,\n",
+        "            \"residual\": residual,\n",
+        "            \"ok\": bool(ok),\n",
+        "            \"inner_iters\": nit,\n",
+        "            \"inner_hit_max\": bool(hit_max),\n",
+        "            \"constraint_violation\": cv,\n",
+        "        }\n",
         "    return step_fn\n",
         "\n",
         "\n",
@@ -252,29 +276,30 @@
         "    def step_fn(x, k):\n",
         "        alpha = 1.0 / (k + 2.0)\n",
         "\n",
-        "        u, ok = resolvent(x, r=r, x_init=x)\n",
+        "        u, ok, nit, hit_max, cv = resolvent(x, r=r, x_init=x)\n",
+        "        residual = float(np.linalg.norm(x - u))\n",
+        "\n",
         "        x_new = alpha * x + (1.0 - alpha) * u\n",
         "\n",
-        "        return x_new, {\"u\": u, \"ok_resolvent\": ok}\n",
+        "        return x_new, {\n",
+        "            \"u\": u,\n",
+        "            \"residual\": residual,\n",
+        "            \"ok\": bool(ok),\n",
+        "            \"inner_iters\": nit,\n",
+        "            \"inner_hit_max\": bool(hit_max),\n",
+        "            \"constraint_violation\": cv,\n",
+        "        }\n",
         "    return step_fn"
       ],
       "metadata": {
         "id": "75bntpZU2Ge5"
       },
-      "execution_count": 12,
+      "execution_count": 9,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "'''\n",
-        "x0_guess = np.array([2.0, 2.0, 2.0, 2.0])\n",
-        "x0, _ = proj_C(x0_guess, x_init=np.zeros(4))\n",
-        "u = np.zeros(4)\n",
-        "r = 1.0\n",
-        "maxit = 200\n",
-        "stop_tol_step = 0.0   # fixed budget'''\n",
-        "\n",
         "import src.benchkit as bk\n",
         "import numpy as np\n",
         "\n",
@@ -286,17 +311,14 @@
         "x0 = np.array([1.8, 1.8, 1.8, 1.8], dtype=float)\n",
         "u_anchor = x0.copy()   # Halpern anchor = x0 (as you’re using)\n",
         "\n",
-        "def residual_fn(_x):\n",
-        "    return 0.0  # cached via info[\"u\"]\n",
-        "\n",
         "logs_sppa, sum_sppa = bk.run(\n",
         "    method_name=\"SPPA\",\n",
         "    x0=x0,\n",
         "    max_iter=maxit,\n",
         "    stop_tol_step=stop_tol_step,\n",
         "    step_fn=make_sppa_step(r),\n",
-        "    residual_fn=residual_fn,\n",
-        "    error_fn=error_fn,   # you defined this using x_star\n",
+        "    residual_fn=None,\n",
+        "    error_fn=error_fn,\n",
         ")\n",
         "\n",
         "logs_wppa, sum_wppa = bk.run(\n",
@@ -305,14 +327,14 @@
         "    max_iter=maxit,\n",
         "    stop_tol_step=stop_tol_step,\n",
         "    step_fn=make_wppa_step(r),\n",
-        "    residual_fn=residual_fn,\n",
+        "    residual_fn=None,\n",
         "    error_fn=error_fn,\n",
         ")"
       ],
       "metadata": {
         "id": "wbGJ1k1B22Qb"
       },
-      "execution_count": 14,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -326,39 +348,33 @@
         "    plot_error=True,\n",
         ")\n",
         "\n",
-        "print(bk.latex_table(\n",
+        "print(bk.latex_tables_split(\n",
         "    [sum_sppa, sum_wppa],\n",
-        "    caption=\"CPU/accuracy summary for Example 5.4 (Rosen--Suzuki equilibrium).\",\n",
-        "    label=\"tab:ex54\",\n",
+        "    caption_perf=\"Computational performance for Experiment 4.\",\n",
+        "    label_perf=\"tab:ex54_perf\",\n",
+        "    caption_acc=\"Accuracy and feasibility metrics for Experiment 4.\",\n",
+        "    label_acc=\"tab:ex54_acc\",\n",
         "))"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 211
         },
         "id": "lneAcp3i6ytv",
-        "outputId": "74505fca-bda0-4f7f-f277-67b51ede183b"
+        "outputId": "ca4a81ad-ba4d-48ec-f5ba-ab5b5ec44e2d"
       },
-      "execution_count": 15,
+      "execution_count": 11,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\\begin{table}[!ht]\n",
-            "\\centering\n",
-            "\\begin{tabular}{lrrrrrr}\n",
-            "\\hline\n",
-            "Method & Iters & Total (s) & Avg resolvent (s) & Avg residual (s) & Final $\\|x_n-\\bar x\\|$ & Final $R(x_n)$\\\\\n",
-            "\\hline\n",
-            "SPPA & 200 & 0.9407 & 0.00466 & 0.00000 & 1.7124e-02 & 1.7061e-02 \\\\\n",
-            "WPPA & 19 & 0.0557 & 0.00290 & 0.00000 & 6.2733e-07 & 0 \\\\\n",
-            "\\hline\n",
-            "\\end{tabular}\n",
-            "\\caption{CPU/accuracy summary for Example 5.4 (Rosen--Suzuki equilibrium).}\n",
-            "\\label{tab:ex54}\n",
-            "\\end{table}\n",
-            "\n"
+          "output_type": "error",
+          "ename": "AttributeError",
+          "evalue": "module 'src.benchkit' has no attribute 'latex_tables_split'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-154/3277551481.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m )\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m print(bk.latex_tables_split(\n\u001b[0m\u001b[1;32m     10\u001b[0m     \u001b[0;34m[\u001b[0m\u001b[0msum_sppa\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msum_wppa\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0mcaption_perf\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"Computational performance for Experiment 4.\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mAttributeError\u001b[0m: module 'src.benchkit' has no attribute 'latex_tables_split'"
           ]
         }
       ]
