--- a/experiments/Example5_4.ipynb
+++ b/experiments/Example5_4.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMoQrRnA5CAIMzb9f5szbVh",
+      "authorship_tag": "ABX9TyP5tjlAh7d7ObDEf2tv/4R0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 23,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "t8Cbaq_J1lD4",
-        "outputId": "1fd28aad-baf9-4567-ba20-513bc04ab48a"
+        "outputId": "38e7fe83-54f4-432d-e588-496a7203213d"
       },
       "outputs": [
         {
@@ -42,13 +42,13 @@
           "name": "stdout",
           "text": [
             "Cloning into 'sp-pa-gep'...\n",
-            "remote: Enumerating objects: 253, done.\u001b[K\n",
-            "remote: Counting objects: 100% (69/69), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (46/46), done.\u001b[K\n",
-            "remote: Total 253 (delta 46), reused 23 (delta 23), pack-reused 184 (from 1)\u001b[K\n",
-            "Receiving objects: 100% (253/253), 4.38 MiB | 29.52 MiB/s, done.\n",
-            "Resolving deltas: 100% (114/114), done.\n",
-            "/content/sp-pa-gep/sp-pa-gep\n"
+            "remote: Enumerating objects: 261, done.\u001b[K\n",
+            "remote: Counting objects: 100% (77/77), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (54/54), done.\u001b[K\n",
+            "remote: Total 261 (delta 51), reused 23 (delta 23), pack-reused 184 (from 1)\u001b[K\n",
+            "Receiving objects: 100% (261/261), 4.39 MiB | 7.64 MiB/s, done.\n",
+            "Resolving deltas: 100% (119/119), done.\n",
+            "/content/sp-pa-gep/sp-pa-gep/sp-pa-gep/sp-pa-gep/sp-pa-gep\n"
           ]
         }
       ],
@@ -77,7 +77,7 @@
       "metadata": {
         "id": "Y-p9F0331yeM"
       },
-      "execution_count": 8,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -294,7 +294,7 @@
       "metadata": {
         "id": "75bntpZU2Ge5"
       },
-      "execution_count": 9,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -334,8 +334,69 @@
       "metadata": {
         "id": "wbGJ1k1B22Qb"
       },
-      "execution_count": 10,
+      "execution_count": 26,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%cd /content/sp-pa-gep\n",
+        "!git pull"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "s6cTJhj_u5V6",
+        "outputId": "ad93cb8d-fa0b-42f0-fcad-7c7e6f8a641e"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/content/sp-pa-gep\n",
+            "remote: Enumerating objects: 7, done.\u001b[K\n",
+            "remote: Counting objects: 100% (7/7), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (4/4), done.\u001b[K\n",
+            "remote: Total 4 (delta 3), reused 0 (delta 0), pack-reused 0 (from 0)\u001b[K\n",
+            "Unpacking objects: 100% (4/4), 1013 bytes | 506.00 KiB/s, done.\n",
+            "From https://github.com/otitamario/sp-pa-gep\n",
+            "   2bce238..632c945  main       -> origin/main\n",
+            "Updating 2bce238..632c945\n",
+            "Fast-forward\n",
+            " src/benchkit.py | 4 \u001b[32m++\u001b[m\u001b[31m--\u001b[m\n",
+            " 1 file changed, 2 insertions(+), 2 deletions(-)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import importlib\n",
+        "from src import benchkit as bk\n",
+        "importlib.reload(bk)\n",
+        "print(hasattr(bk, \"latex_tables_split\"))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "y7IU9dddu9Wr",
+        "outputId": "72d1fa06-fb61-496c-fc32-b82e7100243a"
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -358,23 +419,45 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 211
+          "base_uri": "https://localhost:8080/"
         },
         "id": "lneAcp3i6ytv",
-        "outputId": "ca4a81ad-ba4d-48ec-f5ba-ab5b5ec44e2d"
+        "outputId": "1e732232-ca2e-4e2b-9378-379c2f2ba99c"
       },
-      "execution_count": 11,
+      "execution_count": 32,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "AttributeError",
-          "evalue": "module 'src.benchkit' has no attribute 'latex_tables_split'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-154/3277551481.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m )\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m print(bk.latex_tables_split(\n\u001b[0m\u001b[1;32m     10\u001b[0m     \u001b[0;34m[\u001b[0m\u001b[0msum_sppa\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msum_wppa\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0mcaption_perf\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"Computational performance for Experiment 4.\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mAttributeError\u001b[0m: module 'src.benchkit' has no attribute 'latex_tables_split'"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\\begin{table}[!ht]\n",
+            "\\centering\n",
+            "\\begin{tabular}{lrrrrrrrr}\n",
+            "\\hline\n",
+            "Method & It. & Tot (s) & Avg res (s) & Step$_f$ & Avg in. & Max in. & \\% max & Succ. (\\%)\\\\\n",
+            "\\hline\n",
+            "SPPA & 200 & 0.8212 & 0.00408 & 8.5623e-05 & 8.42 & 21 & 0.0 & 100.0 \\\\\n",
+            "WPPA & 19 & 0.0606 & 0.00317 & 0 & 5.63 & 16 & 0.0 & 100.0 \\\\\n",
+            "\\hline\n",
+            "\\end{tabular}\n",
+            "\\caption{Computational performance for Experiment 4.}\n",
+            "\\label{tab:ex54_perf}\n",
+            "\\end{table}\n",
+            "\n",
+            "\\begin{table}[!ht]\n",
+            "\\centering\n",
+            "\\begin{tabular}{lrrr}\n",
+            "\\hline\n",
+            "Method & Constr. viol. & $\\lVert x_n-\\bar{x}\\rVert$ & $R(x_n)$\\\\\n",
+            "\\hline\n",
+            "SPPA & 1.0930e-10 & 1.7124e-02 & 1.7146e-02 \\\\\n",
+            "WPPA & 5.8284e-11 & 6.2733e-07 & 0 \\\\\n",
+            "\\hline\n",
+            "\\end{tabular}\n",
+            "\\caption{Accuracy and feasibility metrics for Experiment 4.}\n",
+            "\\label{tab:ex54_acc}\n",
+            "\\end{table}\n",
+            "\n"
           ]
         }
       ]
