--- a/experiments/Example_5_3.ipynb
+++ b/experiments/Example_5_3.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPaxUbj7IW9J1dvuMr0R128",
+      "authorship_tag": "ABX9TyMOJEHbSORMUwiKgM8eVkTp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,26 +28,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "YKLRS8ZgoDWn",
-        "outputId": "b61c74ce-07b8-48ed-da9f-2e264c981afb"
+        "outputId": "a1dafc69-33f5-4294-f880-6436dab72b81"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Cloning into 'sp-pa-gep'...\n",
-            "remote: Enumerating objects: 203, done.\u001b[K\n",
-            "remote: Counting objects: 100% (203/203), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (179/179), done.\u001b[K\n",
-            "remote: Total 203 (delta 90), reused 73 (delta 15), pack-reused 0 (from 0)\u001b[K\n",
-            "Receiving objects: 100% (203/203), 3.45 MiB | 11.97 MiB/s, done.\n",
-            "Resolving deltas: 100% (90/90), done.\n",
+            "fatal: destination path 'sp-pa-gep' already exists and is not an empty directory.\n",
             "/content/sp-pa-gep\n"
           ]
         }
@@ -67,6 +61,41 @@
     {
       "cell_type": "code",
       "source": [
+        "%cd /content/sp-pa-gep\n",
+        "!git pull"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MV08A1201ohJ",
+        "outputId": "d2f63269-617b-4d80-a1bf-5fabd18930ce"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/content/sp-pa-gep\n",
+            "remote: Enumerating objects: 7, done.\u001b[K\n",
+            "remote: Counting objects: 100% (7/7), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (4/4), done.\u001b[K\n",
+            "remote: Total 4 (delta 3), reused 0 (delta 0), pack-reused 0 (from 0)\u001b[K\n",
+            "Unpacking objects: 100% (4/4), 1.30 KiB | 265.00 KiB/s, done.\n",
+            "From https://github.com/otitamario/sp-pa-gep\n",
+            "   b5c8d30..18102ff  main       -> origin/main\n",
+            "Updating b5c8d30..18102ff\n",
+            "Fast-forward\n",
+            " src/benchkit.py | 31 \u001b[32m++++++++++++++++\u001b[m\u001b[31m---------------\u001b[m\n",
+            " 1 file changed, 16 insertions(+), 15 deletions(-)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "import os\n",
         "# =========================\n",
         "# OUTPUT DIRECTORY (save plots here)\n",
@@ -77,14 +106,16 @@
       "metadata": {
         "id": "N2wScaSToSC9"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "import os\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
+        "from typing import Dict, List\n",
         "\n",
         "# -----------------------------\n",
         "# Problem data (from the draft)\n",
@@ -167,30 +198,34 @@
         "\n",
         "    return y\n",
         "\n",
-        "def resolvent_state_dependent(x_n, r=1.0, fp_it=50, fp_tol=1e-10, inner_it=300):\n",
+        "def resolvent_state_dependent(x_n, r=1.0, fp_it=200, fp_tol=1e-8, inner_it=400, omega=0.5):\n",
         "    \"\"\"\n",
-        "    Fixed-point loop for the state-dependent resolvent:\n",
-        "      u in C(u), and u approximates the regularized equilibrium step.\n",
+        "    Fixed-point approximation of the state-dependent resolvent.\n",
         "\n",
-        "    We iterate:\n",
-        "      u^{j+1} = argmin over C(u^j) of a convex QP (solved approximately).\n",
+        "    Returns:\n",
+        "        u, fp_iters, fp_hit_max, fp_converged\n",
         "    \"\"\"\n",
-        "    # Start in K\n",
+        "    # start guess (keep in K)\n",
         "    u = proj_K(x_n.copy())\n",
+        "    fp_converged = False\n",
         "\n",
-        "    for _ in range(fp_it):\n",
-        "        u_next = solve_inner_qp_on_box(u_ref=u, x_n=x_n, r=r, y0=u, inner_it=inner_it)\n",
-        "        u_next = proj_K(u_next)  # safety (should already lie in [0,2]^5)\n",
+        "    for j in range(fp_it):\n",
+        "        # raw fixed-point map: u -> projection onto C(u) of inner-QP solution\n",
+        "        u_next_raw = solve_inner_qp_on_box(u_ref=u, x_n=x_n, r=r, y0=u, inner_it=inner_it)\n",
+        "        u_next_raw = proj_K(u_next_raw)\n",
+        "\n",
+        "        # damping / relaxation (critical for convergence)\n",
+        "        u_next = (1.0 - omega) * u + omega * u_next_raw\n",
+        "\n",
+        "        # stopping test\n",
         "        if np.linalg.norm(u_next - u) <= fp_tol:\n",
-        "            u = u_next\n",
-        "            break\n",
+        "            fp_converged = True\n",
+        "            return u_next, (j + 1), False, True\n",
+        "\n",
         "        u = u_next\n",
         "\n",
-        "    return u\n",
-        "\n",
-        "def residual_fn(x):\n",
-        "    u = resolvent_state_dependent(x, r=1.0, fp_it=60, inner_it=400)\n",
-        "    return float(np.linalg.norm(x - u))\n",
+        "    # if reached max\n",
+        "    return u, fp_it, True, False\n",
         "\n",
         "# -----------------------------\n",
         "# SPPA / WPPA outer iterations\n",
@@ -199,7 +234,7 @@
       "metadata": {
         "id": "ESX34ZvIoW2h"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -210,38 +245,62 @@
         "\n",
         "r = 1.0\n",
         "maxit = 200\n",
-        "fp_it = 60\n",
+        "fp_it = 200\n",
         "inner_it = 400\n",
         "stop_tol = 0.0\n",
         "\n",
         "def make_sppa_step():\n",
         "    def step_fn(x, k):\n",
         "        alpha = 1.0 / (k + 2.0)\n",
-        "        u = resolvent_state_dependent(x, r=1.0, fp_it=60, inner_it=400)\n",
+        "\n",
+        "        u, fp_iters, fp_hit_max, fp_ok = resolvent_state_dependent(\n",
+        "            x, r=r, fp_it=fp_it, fp_tol=1e-8, inner_it=inner_it, omega=0.5\n",
+        "        )\n",
+        "        residual = float(np.linalg.norm(x - u))\n",
         "        x_new = alpha * u_anchor + (1.0 - alpha) * u\n",
-        "        return x_new, {\"u\": u}   # <-- IMPORTANT\n",
+        "\n",
+        "        return x_new, {\n",
+        "            \"u\": u,\n",
+        "            \"residual\": residual,\n",
+        "            \"inner_iters\": fp_iters,\n",
+        "            \"inner_hit_max\": fp_hit_max,\n",
+        "            \"ok\": fp_ok,\n",
+        "            \"constraint_violation\": 0.0,\n",
+        "        }\n",
         "    return step_fn\n",
         "\n",
         "\n",
         "def make_wppa_step():\n",
         "    def step_fn(x, k):\n",
         "        alpha = 1.0 / (k + 2.0)\n",
-        "        u = resolvent_state_dependent(x, r=1.0, fp_it=60, inner_it=400)\n",
+        "\n",
+        "        u, fp_iters, fp_hit_max, fp_ok = resolvent_state_dependent(\n",
+        "            x, r=r, fp_it=fp_it, fp_tol=1e-8, inner_it=inner_it, omega=0.5\n",
+        "        )\n",
+        "        residual = float(np.linalg.norm(x - u))\n",
         "        x_new = alpha * x + (1.0 - alpha) * u\n",
-        "        return x_new, {\"u\": u}   # <-- IMPORTANT\n",
+        "\n",
+        "        return x_new, {\n",
+        "            \"u\": u,\n",
+        "            \"residual\": residual,\n",
+        "            \"inner_iters\": fp_iters,\n",
+        "            \"inner_hit_max\": fp_hit_max,\n",
+        "            \"ok\": fp_ok,\n",
+        "            \"constraint_violation\": 0.0,\n",
+        "        }\n",
         "    return step_fn"
       ],
       "metadata": {
         "id": "w4R38qZDpuQV"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "x0 = np.ones(n) * 1.8  # any point in [0,2]^5\n",
-        "u_anchor = np.zeros(n) # Halpern anchor\n",
+        "u_anchor = x0.copy()\n",
         "\n",
         "logs_sppa, sum_sppa = bk.run(\n",
         "    method_name=\"SPPA\",\n",
@@ -249,7 +308,7 @@
         "    max_iter=maxit,\n",
         "    stop_tol_step=stop_tol,\n",
         "    step_fn=make_sppa_step(),\n",
-        "    residual_fn=residual_fn,   # cheap placeholder\n",
+        "    residual_fn=None,\n",
         "    error_fn=None,\n",
         ")\n",
         "\n",
@@ -259,10 +318,9 @@
         "    max_iter=maxit,\n",
         "    stop_tol_step=stop_tol,\n",
         "    step_fn=make_wppa_step(),\n",
-        "    residual_fn=residual_fn,\n",
+        "    residual_fn=None,\n",
         "    error_fn=None,\n",
         ")\n",
-        "\n",
         "\n",
         "bk.make_standard_plots(\n",
         "    logs_by_method={\"SPPA\": logs_sppa, \"WPPA\": logs_wppa},\n",
@@ -272,12 +330,12 @@
         "    plot_error=False,\n",
         ")\n",
         "\n",
-        "print(logs_sppa[-1].residual, logs_wppa[-1].residual)\n",
-        "\n",
-        "print(bk.latex_table(\n",
+        "print(bk.latex_tables_split(\n",
         "    [sum_sppa, sum_wppa],\n",
-        "    caption=\"CPU/accuracy summary for Example 5.3 (state-dependent GEP).\",\n",
-        "    label=\"tab:ex53\",\n",
+        "    caption_perf=\"Computational performance for Experiment 3.\",\n",
+        "    label_perf=\"tab:ex53_perf\",\n",
+        "    caption_acc=\"Accuracy and feasibility metrics for Experiment 3.\",\n",
+        "    label_acc=\"tab:ex53_acc\",\n",
         "))"
       ],
       "metadata": {
@@ -285,27 +343,40 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "C6fFWEASqEkb",
-        "outputId": "53f12dc1-576b-409d-f22c-aef949a9ea89"
+        "outputId": "5badc4a5-3d8b-4275-a158-8939ad181085"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "0.005973274881583385 9.523493105234593e-13\n",
             "\\begin{table}[!ht]\n",
             "\\centering\n",
-            "\\begin{tabular}{lrrrrr}\n",
+            "\\begin{tabular}{lrrrrrrrr}\n",
             "\\hline\n",
-            "Method & Iters & Total (s) & Avg resolvent (s) & Avg residual (s) & Final $R(x_n)$\\\\\n",
+            "Method & It. & Tot (s) & Avg res (s) & Step$_f$ & Avg in. & Max in. & \\% max & Succ. (\\%)\\\\\n",
             "\\hline\n",
-            "SPPA & 200 & 3.7898 & 0.01893 & 0.00000 & 5.9733e-03 \\\\\n",
-            "WPPA & 200 & 3.0559 & 0.01526 & 0.00000 & 9.5235e-13 \\\\\n",
+            "SPPA & 200 & 1.0416 & 0.00520 & 1.0166e-04 & 22.37 & 29 & 0.0 & 100.0 \\\\\n",
+            "WPPA & 200 & 0.0643 & 0.00031 & \\le 1e-16 & 2.02 & 29 & 0.0 & 100.0 \\\\\n",
             "\\hline\n",
             "\\end{tabular}\n",
-            "\\caption{CPU/accuracy summary for Example 5.3 (state-dependent GEP).}\n",
-            "\\label{tab:ex53}\n",
+            "\\caption{Computational performance for Experiment 3.}\n",
+            "\\label{tab:ex53_perf}\n",
+            "\\end{table}\n",
+            "\n",
+            "\\begin{table}[!ht]\n",
+            "\\centering\n",
+            "\\begin{tabular}{lrr}\n",
+            "\\hline\n",
+            "Method & Constr. viol. & $R(x_n)$\\\\\n",
+            "\\hline\n",
+            "SPPA & 0 & 1.8441e-02 \\\\\n",
+            "WPPA & 0 & \\le 1e-16 \\\\\n",
+            "\\hline\n",
+            "\\end{tabular}\n",
+            "\\caption{Accuracy and feasibility metrics for Experiment 3.}\n",
+            "\\label{tab:ex53_acc}\n",
             "\\end{table}\n",
             "\n"
           ]
