--- a/experiments/Example5_5.ipynb
+++ b/experiments/Example5_5.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOe9tq3CCOlmeH0O9LgG0jb",
+      "authorship_tag": "ABX9TyORsjWADDHXcRtfmVkZNAMB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +44,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uFuKNQVWMFZF",
-        "outputId": "0ad9083a-66fc-47b7-93bf-1f5749502291"
+        "outputId": "97b05020-bf05-4ebf-f226-81d84fc83495"
       },
       "execution_count": 1,
       "outputs": [
@@ -53,12 +53,12 @@
           "name": "stdout",
           "text": [
             "Cloning into 'sp-pa-gep'...\n",
-            "remote: Enumerating objects: 236, done.\u001b[K\n",
-            "remote: Counting objects: 100% (52/52), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (29/29), done.\u001b[K\n",
-            "remote: Total 236 (delta 35), reused 23 (delta 23), pack-reused 184 (from 1)\u001b[K\n",
-            "Receiving objects: 100% (236/236), 4.17 MiB | 18.01 MiB/s, done.\n",
-            "Resolving deltas: 100% (103/103), done.\n",
+            "remote: Enumerating objects: 282, done.\u001b[K\n",
+            "remote: Counting objects: 100% (98/98), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (75/75), done.\u001b[K\n",
+            "remote: Total 282 (delta 68), reused 23 (delta 23), pack-reused 184 (from 1)\u001b[K\n",
+            "Receiving objects: 100% (282/282), 4.39 MiB | 26.30 MiB/s, done.\n",
+            "Resolving deltas: 100% (136/136), done.\n",
             "/content/sp-pa-gep\n"
           ]
         }
@@ -120,10 +120,12 @@
         "\n",
         "    # --- Discrete L2 norm: ||x||_{L2} ~ sqrt(h) * ||x||_2 ---\n",
         "    def norm_L2(x: np.ndarray) -> float:\n",
-        "        return float(np.sqrt(h) * np.linalg.norm(x))\n",
+        "      return float(np.sqrt(h) * np.linalg.norm(x))\n",
         "\n",
         "    # Unit L2 ball corresponds to Euclidean radius = 1/sqrt(h)\n",
         "    euclid_radius = 1.0 / np.sqrt(h)\n",
+        "    def error_fn(x: np.ndarray) -> float:\n",
+        "      return norm_L2(x)\n",
         "\n",
         "    def proj_K(x: np.ndarray) -> np.ndarray:\n",
         "        \"\"\"Projection onto L2-unit ball (via equivalent Euclidean ball scaling).\"\"\"\n",
@@ -138,11 +140,9 @@
         "    # Residual: R(x) = ||x - P_K(x - r F(x))||_{L2} (discrete)\n",
         "    # NOTE: We also clip to eps>0 to avoid semilogy(0) issues in plotting.\n",
         "    def residual_fn(x: np.ndarray) -> float:\n",
-        "        y = proj_K(x - r * F(x))\n",
-        "        R = norm_L2(x - y)\n",
-        "        eps = 1e-300\n",
-        "        return float(max(R, eps))\n",
-        "\n",
+        "      y = proj_K(x - r * F(x))\n",
+        "      R = norm_L2(x - y)\n",
+        "      return float(R)\n",
         "    # Inner fixed-point to compute u_n = P_K(x_n - r F(u_n))\n",
         "    def resolvent_fixed_point(xn: np.ndarray) -> tuple[np.ndarray, int]:\n",
         "        z = proj_K(xn)  # safe initialization in K\n",
@@ -158,20 +158,35 @@
         "    # Also: to ensure the residual plotted is the *true* residual, we do NOT rely on benchkit's \"u\" shortcut.\n",
         "    # We'll let benchkit call residual_fn(x_next) by not returning \"residual\" or \"u\".\n",
         "    def make_sppa_step(u_anchor: np.ndarray):\n",
-        "        def step_fn(x: np.ndarray, k: int):\n",
-        "            alpha = 1.0 / (k + 2.0)\n",
-        "            u, inner_iters = resolvent_fixed_point(x)\n",
-        "            x_next = alpha * u_anchor + (1.0 - alpha) * u\n",
-        "            return x_next, {\"inner_iters\": inner_iters}\n",
-        "        return step_fn\n",
+        "      def step_fn(x: np.ndarray, k: int):\n",
+        "          alpha = 1.0 / (k + 2.0)\n",
+        "          u, inner_iters = resolvent_fixed_point(x)\n",
         "\n",
+        "          x_next = alpha * u_anchor + (1.0 - alpha) * u\n",
+        "\n",
+        "          return x_next, {\n",
+        "              \"u\": u,  # allows benchkit to compute step/residual consistently if needed\n",
+        "              \"inner_iters\": inner_iters,\n",
+        "              \"inner_hit_max\": int(inner_iters >= inner_maxit),\n",
+        "              \"ok\": 1,  # fixed-point always returns something; set 0 only if you add failure detection\n",
+        "              \"constraint_violation\": 0.0,  # proj_K enforces feasibility\n",
+        "          }\n",
+        "      return step_fn\n",
         "    def make_wppa_step():\n",
-        "        def step_fn(x: np.ndarray, k: int):\n",
-        "            alpha = 1.0 / (k + 2.0)\n",
-        "            u, inner_iters = resolvent_fixed_point(x)\n",
-        "            x_next = alpha * x + (1.0 - alpha) * u\n",
-        "            return x_next, {\"inner_iters\": inner_iters}\n",
-        "        return step_fn\n",
+        "      def step_fn(x: np.ndarray, k: int):\n",
+        "          alpha = 1.0 / (k + 2.0)\n",
+        "          u, inner_iters = resolvent_fixed_point(x)\n",
+        "\n",
+        "          x_next = alpha * x + (1.0 - alpha) * u\n",
+        "\n",
+        "          return x_next, {\n",
+        "              \"u\": u,\n",
+        "              \"inner_iters\": inner_iters,\n",
+        "              \"inner_hit_max\": int(inner_iters >= inner_maxit),\n",
+        "              \"ok\": 1,\n",
+        "              \"constraint_violation\": 0.0,\n",
+        "          }\n",
+        "      return step_fn\n",
         "\n",
         "    # --- Initial point x0 chosen randomly in K ---\n",
         "    rng = np.random.default_rng(seed)\n",
@@ -189,7 +204,7 @@
         "        stop_tol_step=stop_tol_step,\n",
         "        step_fn=make_sppa_step(u_anchor=u_anchor),\n",
         "        residual_fn=residual_fn,\n",
-        "        error_fn=None,  # x* is 0, but we keep experiment focused on residual/step\n",
+        "        error_fn=error_fn,  # x* is 0, but we keep experiment focused on residual/step\n",
         "    )\n",
         "\n",
         "    logs_wppa, sum_wppa = bk.run(\n",
@@ -199,7 +214,7 @@
         "        stop_tol_step=stop_tol_step,\n",
         "        step_fn=make_wppa_step(),\n",
         "        residual_fn=residual_fn,\n",
-        "        error_fn=None,\n",
+        "        error_fn=error_fn,\n",
         "    )\n",
         "\n",
         "    # --- Plots and LaTeX table using benchkit utilities ---\n",
@@ -214,13 +229,15 @@
         "        show_title=False,\n",
         "    )\n",
         "\n",
-        "    table_tex = bk.latex_table(\n",
-        "        summaries=[sum_sppa, sum_wppa],\n",
-        "        caption=r\"CPU/accuracy summary for Example 5 (discretized $L^2$ unit-ball VI).\",\n",
-        "        label=\"tab:ex5\",\n",
+        "    tables_tex = bk.latex_tables_split(\n",
+        "      [sum_sppa, sum_wppa],\n",
+        "      caption_perf=\"Computational performance for Experiment 5.\",\n",
+        "      label_perf=\"tab:ex5_perf\",\n",
+        "      caption_acc=r\"Accuracy metrics for Experiment 5 (discretized $L^2$ unit-ball VI).\",\n",
+        "      label_acc=\"tab:ex5_acc\",\n",
         "    )\n",
         "\n",
-        "    print(table_tex)\n",
+        "    print(tables_tex)\n",
         "    print(\"Saved:\", outputs)\n",
         "\n",
         "    return outputs, (sum_sppa, sum_wppa), (logs_sppa, logs_wppa)\n",
@@ -234,9 +251,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JaShG6vMWeUO",
-        "outputId": "60e4cb9e-75c1-4006-b0e5-00b139f44392"
+        "outputId": "cf2a6fb0-a55a-447b-b4af-033f9a128cb1"
       },
-      "execution_count": 8,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -244,16 +261,30 @@
           "text": [
             "\\begin{table}[!ht]\n",
             "\\centering\n",
-            "\\begin{tabular}{lrrrrrr}\n",
+            "\\begin{tabular}{lrrrrrrrr}\n",
             "\\hline\n",
-            "Method & Iters & Total (s) & Avg resolvent (s) & Avg residual (s) & Avg inner iters & Final $R(x_n)$\\\\\n",
+            "Method & It. & Tot (s) & Avg res (s) & Step$_f$ & Avg in. & Max in. & \\% max & Succ. (\\%)\\\\\n",
             "\\hline\n",
-            "SPPA & 150 & 0.0169 & 0.00009 & 0.00002 & 5.55 & 7.0811e-43 \\\\\n",
-            "WPPA & 150 & 0.0229 & 0.00013 & 0.00002 & 7.75 & 1.5305e-37 \\\\\n",
+            "SPPA & 150 & 0.0225 & 0.00012 & 7.0188e-04 & 5.55 & 33 & 0.0 & 100.0 \\\\\n",
+            "WPPA & 150 & 0.0300 & 0.00017 & 1.2024e-15 & 7.75 & 33 & 0.0 & 100.0 \\\\\n",
             "\\hline\n",
             "\\end{tabular}\n",
-            "\\caption{CPU/accuracy summary for Example 5 (discretized $L^2$ unit-ball VI).}\n",
-            "\\label{tab:ex5}\n",
+            "\\caption{Computational performance for Experiment 5.}\n",
+            "\\label{tab:ex5_perf}\n",
+            "\\end{table}\n",
+            "\n",
+            "\\begin{table}[!ht]\n",
+            "\\centering\n",
+            "\\begin{tabular}{lrrr}\n",
+            "\\hline\n",
+            "Method & Constr. viol. & $\\lVert x_n-\\bar{x}\\rVert$ & $R(x_n)$\\\\\n",
+            "\\hline\n",
+            "SPPA & 0 & 4.7131e-03 & 7.0188e-04 \\\\\n",
+            "WPPA & 0 & 7.1167e-01 & 1.2024e-15 \\\\\n",
+            "\\hline\n",
+            "\\end{tabular}\n",
+            "\\caption{Accuracy metrics for Experiment 5 (discretized $L^2$ unit-ball VI).}\n",
+            "\\label{tab:ex5_acc}\n",
             "\\end{table}\n",
             "\n",
             "Saved: {'step': 'figures/ex5_L2_unitball_positivepart_steps.png', 'residual': 'figures/ex5_L2_unitball_positivepart_residual.png'}\n"
